--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,18 @@ environment:
   sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
+  connectivity_plus: ^2.3.4
+  country_code_picker: ^2.0.2
+  dots_indicator: ^2.1.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^1.0.3
   google_fonts: ^3.0.1
+  image_picker: ^0.8.5+3
+  pin_code_fields: ^7.4.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
