--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   image_picker: ^0.8.5+3
   pin_code_fields: ^7.4.0
   shared_preferences: ^2.0.15
+  youtube_player_flutter: ^8.1.0
 
 dev_dependencies:
   flutter_test:
