--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,9 @@ dependencies:
   google_fonts: ^3.0.1
   image_picker: ^0.8.5+3
   pin_code_fields: ^7.4.0
+  provider: ^6.0.3
   shared_preferences: ^2.0.15
+  url_launcher: ^6.1.3
   youtube_player_flutter: ^8.1.0
 
 dev_dependencies:
